--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "deeplearn-example",
   "version": "0.1.0",
-  "description": "Basic deeplearn example running on node.js",
+  "description": "Basic deeplearn.js example running on node.js",
   "dependencies": {
     "deeplearn": "~0.3.3"
   },
   "devDependencies": {
+    "browserify": "^14.5.0",
     "mkdirp": "~0.5.1",
     "tsify": "~3.0.3",
-    "tslint": "~5.8.0",
-    "typescript": "~2.6.1",
-    "uglifyjs": "~2.4.11",
-    "watchify": "~3.9.0"
+    "typescript": "~2.6.1"
   },
   "scripts": {
     "prep": "yarn && mkdirp dist",
-    "watch": "watchify main.ts -p [tsify] -v --debug -o dist/bundle.js",
     "build": "browserify main.ts -p [tsify] -o dist/bundle.js",
-    "lint": "tslint -p . -t verbose",
-    "deploy": "yarn build && uglifyjs dist/bundle.js -c -m -o dist/bundle.min.js",
-    "run_example": "yarn build && node dist/bundle.js"
+    "start": "yarn build && node dist/bundle.js"
   },
   "license": "Apache-2.0"
 }
